fix: footer mobile spacing

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -63,7 +63,12 @@
       }
 
       li {
-        margin-bottom: 0.5rem;
+        // mobile-only attributes
+        margin-bottom: $spacing-xs;
+
+        @include desktop {
+          margin-bottom: 0.5rem;
+        }
 
         a {
           color: $white;
@@ -77,7 +82,11 @@
       display: flex;
       flex-direction: row;
       list-style-type: none;
-      margin-top: $spacing-xs;
+      margin-top: $spacing-sm;
+
+      @include desktop {
+        margin-top: $spacing-xs;
+      }
 
       li {
         margin-right: $spacing-xs;
